crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__recursive_params__self_forwarding.snap
---
source: crates/nash-codegen/src/optimizer_tests/recursive_params.rs
expression: "crate::harness::pass_snapshot(&arena, before,\nformat!(\"--- isolated Core before\\n{}\\n--- isolated Core after\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), original.uplc, result.uplc, result.result,\nresult.logs))"
---
--- unoptimized Core
letrec
  f#1 : int -> int -> int [static []] = \x#3 : int n#4 : int -> case@Bool equalsInteger n#4 0 of
    True -> 42
    False -> f#1 x#3 (subtractInteger n#4 1)
in
f#1 7 3
--- unoptimized UPLC
(program 1.1.0
  [(lam f_1 [[f_1 (con integer 7)] (con integer 3)])
    [(lam self_2 [self_2 self_2])
      (lam self_2
        (lam x_3
          (lam n_4
            (case
              [[(builtin equalsInteger) n_4] (con integer 0)]
              [[[self_2 self_2] x_3] [[(builtin subtractInteger) n_4] (con integer 1)]]
              (con integer 42)))))]])
--- optimized Core
letrec
  worker#8 : int -> int [static []] = \n#7 : int -> let anf#9 : bool = equalsInteger n#7 0 in
  case@Bool anf#9 of
    True -> 42
    False -> let anf#10 : int = subtractInteger n#7 1 in
    worker#8 anf#10
in
worker#8 3
--- optimized UPLC
(program 1.1.0
  [(lam worker_12 [worker_12 (con integer 3)])
    [(lam self_3 [self_3 self_3])
      (lam self_4
        (lam n_5
          [(lam anf_6
            (case
              anf_6
              [(lam anf_11 [[self_4 self_4] anf_11])
                [[(builtin subtractInteger) n_5] (con integer 1)]]
              (con integer 42)))
            [[(builtin equalsInteger) n_5] (con integer 0)]]))]])
--- isolated pass
--- isolated Core before
letrec
  f#1 : int -> int -> int [static []] = \x#3 : int n#4 : int -> case@Bool equalsInteger n#4 0 of
    True -> 42
    False -> f#1 x#3 (subtractInteger n#4 1)
in
f#1 7 3
--- isolated Core after
letrec
  f#1 : int -> int [static []] = \n#4 : int -> case@Bool equalsInteger n#4 0 of
    True -> 42
    False -> let arg#2 : int = subtractInteger n#4 1 in
    f#1 arg#2
in
f#1 3
--- isolated UPLC before
(program 1.1.0
  [(lam f_1 [[f_1 (con integer 7)] (con integer 3)])
    [(lam self_81 [self_81 self_81])
      (lam self_81
        (lam x_3
          (lam n_4
            (case
              [[(builtin equalsInteger) n_4] (con integer 0)]
              [[[self_81 self_81] x_3] [[(builtin subtractInteger) n_4] (con integer 1)]]
              (con integer 42)))))]])
--- isolated UPLC after
(program 1.1.0
  [(lam f_1 [f_1 (con integer 3)])
    [(lam self_84 [self_84 self_84])
      (lam self_84
        (lam n_4
          [(lam anf_3
            (case
              anf_3
              [(lam arg_2 [[self_84 self_84] arg_2])
                [[(builtin subtractInteger) n_4] (con integer 1)]]
              (con integer 42)))
            [[(builtin equalsInteger) n_4] (con integer 0)]]))]])
--- result
(con integer 42)
--- logs
[]
