crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__recursive_params__static_indices_and_call_type_views_survive.snap
---
source: crates/nash-codegen/src/optimizer_tests/recursive_params.rs
expression: "crate::harness::pass_snapshot(&arena, before,\nformat!(\"--- isolated Core before\\n{}\\n--- isolated Core after\\n{}\",\npretty(before), pretty(after)))"
---
--- unoptimized Core
letrec
  f#1 : int -> int -> int [static [1]] = \unused#2 : int used#3 : int -> used#3
in
f#1 0 42
--- unoptimized UPLC
(program 1.1.0
  [(lam f_1 [[f_1 (con integer 0)] (con integer 42)])
    [(lam self_4 [self_4 self_4]) (lam self_4 (lam unused_2 (lam used_3 used_3)))]])
--- optimized Core
letrec
  f#4 : int -> int [static [0]] = \used#6 : int -> used#6
in
f#4 42
--- optimized UPLC
(program 1.1.0
  [(lam f_8 [f_8 (con integer 42)])
    [(lam self_3 [self_3 self_3]) (lam self_5 (lam used_7 used_7))]])
--- isolated pass
--- isolated Core before
letrec
  f#1 : int -> int -> int [static [1]] = \unused#2 : int used#3 : int -> used#3
in
f#1 0 42
--- isolated Core after
letrec
  f#1 : int -> int [static [0]] = \used#3 : int -> used#3
in
f#1 42
